--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,6 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>log4j</groupId>-->
-            <!--<artifactId>log4j</artifactId>-->
-            <!--<version>1.2.17</version>-->
-        <!--</dependency>-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -98,12 +93,13 @@
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <!--<version>9.1-901-1.jdbc4</version>-->
+            <!--<version>9.3-1102-jdbc4</version>-->
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.3-1102-jdbc41</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
@@ -158,6 +154,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
