--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -61,7 +61,9 @@ spring:
     username: postgres      #设置数据库连接用户名
     password: root          #设置密码
     url: jdbc:postgresql://127.0.0.1:5432/postgres?useSSL=false    #设置访问地址
-    driver-class-name: org.postgresql.Driver          #设置连接驱动
+    driver-class-name: org.postgresql.Driver #设置连接驱动
+#    tomcat:
+#      validation-query-timeout: 10
 
 
 ---
