--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
         <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <!--<version>9.1-901-1.jdbc4</version>-->
+            <version>9.1-901-1.jdbc4</version>
             <!--<version>9.3-1102-jdbc4</version>-->
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
@@ -158,6 +158,13 @@
             <artifactId>webjars-locator</artifactId>
             <version>0.32-1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.40</version>
+        </dependency>
+
 
     </dependencies>
 
