--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,6 +2,7 @@
 log4j.rootLogger = INFO,  stdout , D
 log4j.logger.com.cplh.gt.dao=DEBUG
 
+
 ### \u6253\u5370\u5230\u63A7\u5236\u53F0###
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target = System.out
@@ -12,7 +13,7 @@ log4j.appender.stdout.layout.ConversionPattern =  %d{ABSOLUTE} ===== %5p %c{1}:%
 #### \u6253\u5370\u5230\u6587\u4EF6 ###
 ####\u6BCF\u5929\u4EA7\u751F\u4E00\u4E2A\u65E5\u5FD7\u6587\u4EF6###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = E:/logs/log.log
+log4j.appender.D.File = C:/logs/log.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
