--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -50,8 +50,9 @@ spring:
     encoding: UTF-8
   redis:
    database: 0
-   host: 192.168.0.113
+  # host: 192.168.0.113
    port: 6379
+   host: 192.168.7.243
 
   output:
     ansi:
