添加rabbitmq支持 测试点对点 广播 主题式应用 自定义消息转化器

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -57,6 +57,11 @@ spring:
   output:
     ansi:
       enabled: always
+  rabbitmq:
+      host: 192.168.7.243
+      port: 5672
+      username: guest
+      password: guest
 
 #  resources:
 #    static-locations: classpath:/META-INF/resources/webjars/**
