--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -96,7 +96,13 @@ dubbo:
     name : consum
   registry:
     address: zookeeper://192.168.7.243:2181
-
+management:
+  security:
+    enabled: false
+info:
+  ceshi:
+    asd
+    dsa
 
 
 ---
