--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
     </properties>
 
     <dependencies>
+        <!--引入获取图片信息jar-->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
